# midipenguin

./: .gitignore  .travis.yml  README.rst  mypy.ini  pyproject.toml  setup.cfg  touchpadmidi.py
src/midipenguin/: touchpadmidi.py
