[build-system]
# Minimum requirements for the build system to execute.
requires = ["Cython", "setuptools", "wheel"]  # PEP 508 specifications + Cython.

[tool.black]
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
