[metadata]
name = midipenguin
version = attr: midipenguin.version.__version__
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
license = BSD
license_file = LICENSE.rst
description = Tools for using a Linux laptop as a MIDI controller
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/akaihola/midipenguin
    Change Log = https://github.com/akaihola/midipenguin/CHANGES.rst
url = https://github.com/akaihola/midipenguin

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    evdev
    python-rtmidi
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    touchpadmidi = midipenguin.touchpadmidi:main

[options.extras_require]
test =
    pytest
    pytest-black
    pytest-isort
    pytest-mypy
