[metadata]
name = midipenguin
version = attr: midipenguin.version.__version__
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
license = BSD
license_file = LICENSE.rst
description = Tools for using a Linux laptop as a MIDI controller
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/akaihola/midipenguin
    Change Log = https://github.com/akaihola/midipenguin/CHANGES.rst
url = https://github.com/akaihola/midipenguin

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    evdev
    python-rtmidi
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    touchpadmidi = midipenguin.touchpadmidi:main

[options.extras_require]
test =
    pytest
    pytest-black
    pytest-isort
    pytest-mypy



[mypy]
disallow_any_unimported = True
disallow_any_expr = False
disallow_any_decorated = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_subclassing_any = True

disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True

no_implicit_optional = False
strict_optional = True

warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_return_any = True
warn_unreachable = True

show_none_errors = True
ignore_errors = False

allow_untyped_globals = False
implicit_reexport = False
strict_equality = True

[mypy-evdev.*]
ignore_missing_imports = True

[mypy-midipenguin.touchpadmidi.*]
disallow_any_unimported = False
disallow_subclassing_any = False

[mypy-rtmidi.*]
ignore_missing_imports = True
